--- a/index.html
+++ b/index.html
@@ -1,116 +1,67 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nosso Amor 💖</title>
+  <title>Feliz Dia dos Namorados 💖</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #ff9a9e, #fad0c4);
-      color: #fff;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #ffe6f0;
       text-align: center;
+      color: #333;
+      max-width: 480px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 10px;
     }
-
-    .container {
-      padding: 1rem;
-      max-width: 95%;
-      margin: auto;
-    }
-
     h1 {
       font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
-    .foto {
-      width: 100%;
-      max-width: 300px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #fff5;
-      margin: 1.5rem 0;
-    }
-
-    .carta {
-      font-size: 1.1rem;
-      white-space: pre-line;
-      min-height: 150px;
-      margin: 2rem 0;
-    }
-
-    .heart {
-      font-size: 3rem;
-      animation: pulse 1.5s infinite;
-      margin-bottom: 2rem;
-    }
-
-    .btn {
-      background-color: #fff;
+      margin-top: 20px;
       color: #d6336c;
-      font-size: 1.1rem;
-      padding: 0.7rem 1.2rem;
-      border: none;
+    }
+    img {
+      width: 100%;
+      height: auto;
       border-radius: 10px;
+      margin-top: 20px;
+    }
+    p {
+      font-size: 1.1rem;
+      margin: 20px 0;
+      line-height: 1.4;
+    }
+    .btn {
+      display: inline-block;
+      padding: 12px 24px;
+      background-color: #d6336c;
+      color: white;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 25px;
       cursor: pointer;
-      box-shadow: 0 0 10px #fff5;
-      transition: background 0.3s;
+      margin-bottom: 30px;
+      transition: background-color 0.3s ease;
     }
-
     .btn:hover {
-      background-color: #ffe0eb;
-    }
-
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.3); }
+      background-color: #a5284f;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Feliz Dia dos Namorados! 💑</h1>
-    
-    <!-- Sua imagem do Imgur (link direto) -->
-    <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Nossa foto" class="foto" />
+  <h1>Feliz Dia dos Namorados 💖</h1>
+  <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Dia dos Namorados" />
+  <p>Que o amor e a alegria estejam sempre presentes na nossa vida juntos!</p>
+  <button id="tocarMusica" class="btn">Tocar música 💖</button>
 
-    <p id="carta" class="carta"></p>
-
-    <button id="tocarMusica" class="btn">Tocar música 💖</button>
-
-    <div class="heart">❤️</div>
-  </div>
-
-  <!-- Música externa: substitua por link seu se quiser -->
   <audio id="audio" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    <source src="https://drive.google.com/uc?export=download&id=1nnTzTNOecl6GlNBkIsGwY4sITPg1yrcu" type="audio/mpeg" />
     Seu navegador não suporta áudio.
   </audio>
 
   <script>
-    const texto = `Amor da minha vida,
-
-Cada momento ao seu lado é um presente que agradeço todos os dias. 
-Você é meu sorriso, minha paz, meu lar.
-
-Feliz Dia dos Namorados! 💖
-
-Com todo o meu amor,
-[Seu Nome Aqui]`;
-
-    let i = 0;
-    const velocidade = 50;
-
-    function escrever() {
-      if (i < texto.length) {
-        document.getElementById("carta").textContent += texto.charAt(i);
-        i++;
-        setTimeout(escrever, velocidade);
-      }
-    }
-
-    escrever();
-
     const botao = document.getElementById("tocarMusica");
     const audio = document.getElementById("audio");
 
