--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Feliz Dia dos Namorados 💖</title>
   <style>
     body {
@@ -57,7 +57,7 @@
   <button id="tocarMusica" class="btn">Tocar música 💖</button>
 
   <audio id="audio" loop>
-    <source src="https://drive.google.com/uc?export=download&id=1nnTzTNOecl6GlNBkIsGwY4sITPg1yrcu" type="audio/mpeg" />
+    <source src="https://cdn.pixabay.com/download/audio/2022/02/24/audio_438cc4c46b.mp3?filename=romantic-5539.mp3" type="audio/mpeg" />
     Seu navegador não suporta áudio.
   </audio>
 
