--- a/index.html
+++ b/index.html
@@ -42,11 +42,16 @@
       border: none;
       border-radius: 25px;
       cursor: pointer;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
       transition: background-color 0.3s ease;
     }
     .btn:hover {
       background-color: #a5284f;
+    }
+    audio {
+      width: 100%;
+      margin-top: 10px;
+      outline: none;
     }
   </style>
 </head>
@@ -54,9 +59,10 @@
   <h1>Feliz Dia dos Namorados 💖</h1>
   <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Dia dos Namorados" />
   <p>Que o amor e a alegria estejam sempre presentes na nossa vida juntos!</p>
+
   <button id="tocarMusica" class="btn">Tocar música 💖</button>
 
-  <audio id="audio" loop>
+  <audio id="audio" loop controls>
     <source src="https://cdn.pixabay.com/download/audio/2022/02/24/audio_438cc4c46b.mp3?filename=romantic-5539.mp3" type="audio/mpeg" />
     Seu navegador não suporta áudio.
   </audio>
@@ -66,13 +72,10 @@
     const audio = document.getElementById("audio");
 
     botao.addEventListener("click", () => {
-      audio.volume = 1.0;
-      audio.play().then(() => {
-        botao.style.display = "none";
-      }).catch((error) => {
-        alert("Erro ao tentar tocar a música. Por favor, toque manualmente no player.");
-        console.error(error);
+      audio.play().catch(() => {
+        // Não faz nada, o usuário pode usar os controles
       });
+      botao.style.display = "none";
     });
   </script>
 </body>
