--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       border: none;
       border-radius: 25px;
       cursor: pointer;
-      margin-bottom: 10px;
+      margin-bottom: 30px;
       transition: background-color 0.3s ease;
     }
     .btn:hover {
@@ -63,7 +63,7 @@
   <button id="tocarMusica" class="btn">Tocar música 💖</button>
 
   <audio id="audio" loop controls>
-    <source src="https://cdn.pixabay.com/download/audio/2022/02/24/audio_438cc4c46b.mp3?filename=romantic-5539.mp3" type="audio/mpeg" />
+    <source src="https://freepd.com/music/Isolation%20Waltz.mp3" type="audio/mpeg" />
     Seu navegador não suporta áudio.
   </audio>
 
