--- a/index.html
+++ b/index.html
@@ -33,50 +33,25 @@
       margin: 20px 0;
       line-height: 1.4;
     }
-    .btn {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: #d6336c;
-      color: white;
-      font-size: 1.2rem;
+    iframe {
+      margin-top: 20px;
       border: none;
-      border-radius: 25px;
-      cursor: pointer;
-      margin-bottom: 30px;
-      transition: background-color 0.3s ease;
-    }
-    .btn:hover {
-      background-color: #a5284f;
-    }
-    audio {
-      width: 100%;
-      margin-top: 10px;
-      outline: none;
     }
   </style>
 </head>
 <body>
   <h1>Feliz Dia dos Namorados 💖</h1>
+
   <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Dia dos Namorados" />
+
   <p>Que o amor e a alegria estejam sempre presentes na nossa vida juntos!</p>
 
-  <button id="tocarMusica" class="btn">Tocar música 💖</button>
-
-  <audio id="audio" loop controls>
-    <source src="https://freepd.com/music/Isolation%20Waltz.mp3" type="audio/mpeg" />
-    Seu navegador não suporta áudio.
-  </audio>
-
-  <script>
-    const botao = document.getElementById("tocarMusica");
-    const audio = document.getElementById("audio");
-
-    botao.addEventListener("click", () => {
-      audio.play().catch(() => {
-        // Não faz nada, o usuário pode usar os controles
-      });
-      botao.style.display = "none";
-    });
-  </script>
+  <!-- Spotify miniplayer incorporado -->
+  <iframe style="border-radius:12px"
+    src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator"
+    width="100%" height="352" frameBorder="0" allowfullscreen=""
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+    loading="lazy">
+  </iframe>
 </body>
 </html>
