--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@
 <body>
   <h1>Feliz Dia dos Namorados 💖</h1>
 
-  <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Dia dos Namorados" />
-
-  <p>Que o amor e a alegria estejam sempre presentes na nossa vida juntos!</p>
-
-  <!-- Spotify miniplayer incorporado -->
+  <!-- Spotify miniplayer -->
   <iframe style="border-radius:12px"
     src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator"
-    width="100%" height="352" frameBorder="0" allowfullscreen=""
+    width="100%" height="152" frameBorder="0" allowfullscreen=""
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
     loading="lazy">
   </iframe>
+
+  <!-- Imagem do casal -->
+  <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Dia dos Namorados" />
+
+  <p>Que o amor e a alegria estejam sempre presentes na nossa vida juntos!</p>
 </body>
 </html>
