--- a/surpresa.html
+++ b/surpresa.html
@@ -15,7 +15,7 @@
       max-width: 480px;
       margin-left: auto;
       margin-right: auto;
-      padding: 10px;
+      padding: 20px;
     }
     h1 {
       font-size: 2rem;
@@ -25,24 +25,36 @@
     img {
       width: 100%;
       height: auto;
-      border-radius: 10px;
-      margin-top: 20px;
+      border-radius: 15px;
+      margin: 20px 0;
+      box-shadow: 0 4px 15px rgba(199, 56, 102, 0.2);
     }
     p {
       font-size: 1.1rem;
       margin: 20px 0;
-      line-height: 1.4;
+      line-height: 1.6;
     }
     iframe {
-      margin-top: 20px;
+      margin: 20px 0;
       border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(199, 56, 102, 0.2);
+    }
+    .heart {
+      font-size: 3rem;
+      animation: pulse 1.5s infinite;
+      margin: 20px 0;
+    }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.3); }
     }
   </style>
 </head>
 <body>
-  <h1>Feliz Dia dos Namorados 💖</h1>
+  <h1>Feliz Dia dos Namorados! 💖</h1>
 
-  <!-- Spotify miniplayer -->
+  <!-- Player do Spotify -->
   <iframe style="border-radius:12px"
     src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator"
     width="100%" height="152" frameBorder="0" allowfullscreen=""
@@ -50,9 +62,11 @@
     loading="lazy">
   </iframe>
 
-  <!-- Imagem do casal -->
-  <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Dia dos Namorados" />
+  <!-- Foto do casal -->
+  <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Nós dois" />
 
-  <p>Que o amor e a alegria estejam sempre presentes na nossa vida juntos!</p>
+  <p>Que este dia seja tão especial quanto cada momento que passamos juntos. Você é a melhor coisa que já aconteceu na minha vida. Te amo! ❤️</p>
+
+  <div class="heart">❤️</div>
 </body>
 </html>
