--- a/index.html
+++ b/index.html
@@ -11,11 +11,58 @@
       text-align: center;
       margin: 0;
       padding: 30px 20px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .heart-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    .heart-bg span {
+      position: absolute;
+      display: block;
+      color: rgba(199, 56, 102, 0.3);
+      animation: float 15s linear infinite;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 0;
+      }
+      10% {
+        opacity: 1;
+      }
+      90% {
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-100px) rotate(360deg);
+        opacity: 0;
+      }
+    }
+
+    .content {
+      position: relative;
+      z-index: 1;
     }
 
     .logo {
       font-size: 3rem;
       margin-top: 20px;
+      animation: pulse 1.5s infinite alternate;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      100% { transform: scale(1.1); }
     }
 
     h1 {
@@ -27,7 +74,21 @@
     p {
       color: #8b1e3f;
       font-size: 1rem;
-      margin-bottom: 30px;
+      margin-bottom: 15px;
+    }
+
+    .dica {
+      font-style: italic;
+      color: #c73866;
+      margin-bottom: 20px;
+      min-height: 20px;
+    }
+
+    .mensagem-carinhosa {
+      color: #d6336c;
+      font-weight: bold;
+      margin: 10px 0;
+      min-height: 20px;
     }
 
     .senha-digitada {
@@ -55,14 +116,24 @@
       padding: 20px;
       background-color: #fff;
       border: none;
-      border-radius: 20px;
+      border-radius: 50%;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       color: #c73866;
       transition: background 0.2s, transform 0.1s;
+      cursor: pointer;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+    }
+
+    .num-btn:hover {
+      background-color: #f9bfd5;
     }
 
     .num-btn:active {
-      background-color: #f9bfd5;
       transform: scale(0.95);
     }
 
@@ -75,39 +146,113 @@
       margin-top: 10px;
       display: none;
     }
+
+    .share-buttons {
+      margin-top: 20px;
+    }
+
+    .share-btn {
+      background: #c73866;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      padding: 8px 15px;
+      margin: 0 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .share-btn:hover {
+      background: #8b1e3f;
+    }
   </style>
 </head>
 <body>
+  <div class="heart-bg" id="heartBg"></div>
+  
+  <div class="content">
+    <div class="logo">💖</div>
+    <h1>Meu Amor</h1>
+    <p>uma data especial para nós</p>
+    <div class="dica" id="dica">Dica: O dia em que começamos nosso namoro</div>
+    <div class="mensagem-carinhosa" id="mensagemCarinhosa"></div>
 
-  <div class="logo">🎀</div>
-  <h1>Meu Amor</h1>
-  <p>uma data especial para nós</p>
+    <div class="senha-digitada" id="senhaDigitada"></div>
 
-  <div class="senha-digitada" id="senhaDigitada"></div>
+    <div class="teclado">
+      <button class="num-btn">1</button>
+      <button class="num-btn">2</button>
+      <button class="num-btn">3</button>
+      <button class="num-btn">4</button>
+      <button class="num-btn">5</button>
+      <button class="num-btn">6</button>
+      <button class="num-btn">7</button>
+      <button class="num-btn">8</button>
+      <button class="num-btn">9</button>
+      <button class="num-btn controle" id="limpar">⌫</button>
+      <button class="num-btn">0</button>
+      <button class="num-btn controle" id="esconder">🔒</button>
+    </div>
 
-  <div class="teclado">
-    <button class="num-btn">1</button>
-    <button class="num-btn">2</button>
-    <button class="num-btn">3</button>
-    <button class="num-btn">4</button>
-    <button class="num-btn">5</button>
-    <button class="num-btn">6</button>
-    <button class="num-btn">7</button>
-    <button class="num-btn">8</button>
-    <button class="num-btn">9</button>
-    <button class="num-btn controle" id="limpar">⌫</button>
-    <button class="num-btn">0</button>
-    <button class="num-btn controle" id="esconder">🔒</button>
+    <div class="erro" id="erro">Senha incorreta 💭</div>
+
+    <div class="share-buttons">
+      <button class="share-btn" id="shareWhatsapp">Compartilhar no WhatsApp</button>
+      <button class="share-btn" id="shareInstagram">Compartilhar no Instagram</button>
+    </div>
   </div>
 
-  <div class="erro" id="erro">Senha incorreta 💭</div>
-
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const senhaCorreta = "1406";
+    const senhaCorreta = "1406"; // Substitua pela data do seu namoro (DDMM)
     let senhaAtual = "";
     const senhaDigitada = document.getElementById('senhaDigitada');
     const erro = document.getElementById('erro');
+    const mensagemCarinhosa = document.getElementById('mensagemCarinhosa');
+    const heartBg = document.getElementById('heartBg');
 
+    // Criar corações flutuantes
+    function criarCoracoes() {
+      for (let i = 0; i < 15; i++) {
+        const heart = document.createElement('span');
+        heart.innerHTML = '❤️';
+        heart.style.left = Math.random() * 100 + 'vw';
+        heart.style.fontSize = (Math.random() * 20 + 10) + 'px';
+        heart.style.animationDuration = (Math.random() * 10 + 10) + 's';
+        heart.style.animationDelay = Math.random() * 5 + 's';
+        heartBg.appendChild(heart);
+      }
+    }
+
+    // Mensagens carinhosas conforme digita
+    const mensagens = {
+      1: "Você é incrível!",
+      2: "Meu coração é seu!",
+      3: "Nosso amor é lindo!",
+      4: "Você completa minha vida!"
+    };
+
+    // Efeito de confete
+    function triggerConfetti() {
+      confetti({
+        particleCount: 150,
+        spread: 70,
+        origin: { y: 0.6 },
+        colors: ['#ff0000', '#ff69b4', '#ff1493']
+      });
+    }
+
+    // Botões de compartilhamento
+    document.getElementById('shareWhatsapp').addEventListener('click', () => {
+      const text = "Olha que site romântico meu amor fez para mim! 💖";
+      window.open(`https://wa.me/?text=${encodeURIComponent(text)}`);
+    });
+
+    document.getElementById('shareInstagram').addEventListener('click', () => {
+      alert("Print a tela e compartilhe no Instagram com a hashtag #AmorPerfeito!");
+    });
+
+    // Teclado numérico
     document.querySelectorAll('.num-btn').forEach(btn => {
       btn.addEventListener('click', () => {
         const valor = btn.textContent;
@@ -121,24 +266,35 @@
         }
 
         senhaDigitada.textContent = senhaAtual.replace(/./g, "•");
+        
+        // Mostrar mensagens carinhosas
+        if (senhaAtual.length in mensagens) {
+          mensagemCarinhosa.textContent = mensagens[senhaAtual.length];
+        } else {
+          mensagemCarinhosa.textContent = "";
+        }
 
         if (senhaAtual.length === senhaCorreta.length) {
           if (senhaAtual === senhaCorreta) {
             erro.style.display = 'none';
+            triggerConfetti();
             setTimeout(() => {
               window.location.href = 'surpresa.html';
-            }, 500);
+            }, 1500);
           } else {
             erro.style.display = 'block';
             senhaAtual = "";
             senhaDigitada.textContent = "";
+            mensagemCarinhosa.textContent = "Tente novamente, amor!";
           }
         } else {
           erro.style.display = 'none';
         }
       });
     });
-  </script>
 
+    // Inicializar corações flutuantes
+    criarCoracoes();
+  </script>
 </body>
 </html>
